force-app/main/default/objects/State_Incentives__c/State_Incentives__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>State incentives for a loan calculation</description>
    <label>State Incentives</label>
</CustomObject>