force-app/main/default/objects/State_Incentives__c/fields/Cap__c.field-meta.xml
<CustomField>
    <fullName>Cap__c</fullName>
    <label>Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>