force-app/main/default/objects/State_Incentives__c/fields/PPA_Rate_kWh__c.field-meta.xml
<CustomField>
    <fullName>PPA_Rate_kWh__c</fullName>
    <label>PPA Rate (Buy-all,Sell-all) - $/kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>