force-app/main/default/objects/State_Incentives__c/fields/Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Property_Taxes__c</fullName>
    <label>Property Taxes</label>
    <length>15</length>
    <type>Text</type>
</CustomField>