force-app/main/default/objects/State_Incentives__c/fields/Rebate_kW__c.field-meta.xml
<CustomField>
    <fullName>Rebate_kW__c</fullName>
    <label>Rebate ($/kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>