force-app/main/default/objects/State_Incentives__c/fields/Retail_rate_credit_kWh__c.field-meta.xml
<CustomField>
    <fullName>Retail_rate_credit_kWh__c</fullName>
    <label>Retail rate credit - $/kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>