force-app/main/default/objects/State_Incentives__c/fields/State_Tax_Credit_in_Year_1__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Credit_in_Year_1__c</fullName>
    <label>State Tax Credit in Year 1 $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>