force-app/main/default/objects/State_Incentives__c/fields/State_Tax_Credit_in_Years_2_11__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Credit_in_Years_2_11__c</fullName>
    <label>State Tax Credit in Years 2-11 $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>