force-app/main/default/objects/State_Incentives__c/fields/State_Tax_Credit_percent__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Credit_percent__c</fullName>
    <label>State Tax Credit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>