force-app/main/default/objects/State_Incentives__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Cap__c</columns>
    <columns>PPA_Rate_kWh__c</columns>
    <columns>Property_Taxes__c</columns>
    <columns>Rebate_kW__c</columns>
    <columns>Retail_rate_credit_kWh__c</columns>
    <columns>State_Tax_Credit_percent__c</columns>
    <columns>State_Tax_Credit_in_Year_1__c</columns>
    <columns>State_Tax_Credit_in_Years_2_11__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>